Fix footer pagination links alignment

--- a/_sass/component.footer.scss
+++ b/_sass/component.footer.scss
@@ -8,6 +8,7 @@
     font-weight: bold;
     position: relative;
     text-transform: uppercase;
+    margin: 0;
 
     &::before {
         color: $colour-space-grey;
